# Tema1_IEP

./: CMakeLists.txt  README.md  remake.sh
classes/: Animal.cpp  Animal.hpp  CMakeLists.txt  Zoo.cpp  Zoo.hpp
src/: main.cpp
